Fjernet funksjon for å sortere listen siden man kan gjøre det i lettere i numbers